manifests/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi-service
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: user-java-service
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: userprofile-service
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: trips-service
          servicePort: 80
        path: /api/trips
