manifests/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths: 
      - backend:
          serviceName: tripviewer-service
          servicePort: 80
        path: /
