manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi-service
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: user-java-service
          servicePort: 80
        path: /api/user-java
